fix overflow

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -27,9 +27,11 @@ h2
 
   .norns-screenshot-container
     position: relative
+    overflow: hidden
 
     img
       display: inline-block
+      
       width: 100%
 
     .img-norns-screenshot
